# 3BodyProblem

./: .dockerignore  .vercelignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  render.yaml  replit.md  requirements-api.txt  requirements.txt  run_app.py  setup.py  vercel.json
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: index.py  requirements.txt
app/: app.py  streamlit_app.py
backend/: __init__.py  main.py  presets.py  schemas.py
core/: body.py  runner.py  simulation.py  solver.py
docs/: concepts.md  deploy.md  structure.md
frontend/: .env.example  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/api/: client.ts  schema.ts
frontend/src/components/: BodyEditor.tsx  ComparisonPanel.tsx  Controls.tsx  EnergyChart.tsx  Viewer3D.tsx
frontend/src/pages/: LandingPage.tsx  Simulator.tsx
scripts/: run_three_body.py  run_two_body.py
src/: setup.py
tests/: test_api.py  test_body.py  test_runner.py  test_simulation.py  test_solver.py
visualization/: animate.py  plot.py
