[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "3bodyproblem"
version = "1.0.0"
description = "N-body gravitational simulation with interactive Streamlit visualization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ipveka" }]
keywords = [
    "physics",
    "simulation",
    "gravity",
    "orbital-mechanics",
    "n-body",
    "celestial-mechanics",
    "astronomy",
    "visualization",
    "streamlit",
    "education",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
    "pandas>=2.3.1",
    "streamlit>=1.47.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/ipveka/3bodyproblem"
Source = "https://github.com/ipveka/3bodyproblem"
Tracker = "https://github.com/ipveka/3bodyproblem/issues"

[project.scripts]
3body-demo-two = "scripts.run_two_body:main"
3body-demo-three = "scripts.run_three_body:main"

[tool.setuptools]
packages = ["core", "visualization", "app", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
